src/objects/Account_Type_Code__c.object
<CustomObject>
    <description>Account type dictionary</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quality_code__c</fullName>
        <label>Quality code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Id__c</fullName>
        <label>Type Id</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_category__c</fullName>
        <label>Type category</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>Account Type Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Type Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>